-- Requires 01_content.sql. First release: one SKU per order, CNY, WeChat Native.
-- No live product prices are seeded. Business logic must enforce amount invariants.
SET NAMES utf8mb4 COLLATE utf8mb4_unicode_ci;
SET time_zone = '+00:00';

CREATE TABLE products (
  id CHAR(32) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  sku VARCHAR(64) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  name VARCHAR(200) NOT NULL,
  kind ENUM('CREDIT_PACK','MEMBERSHIP','GAME_ACCESS') NOT NULL COMMENT '首期仅开放CREDIT_PACK，其余需权益实现',
  status ENUM('DRAFT','ACTIVE','INACTIVE') NOT NULL DEFAULT 'DRAFT',
  price_fen BIGINT UNSIGNED NOT NULL,
  currency CHAR(3) CHARACTER SET ascii COLLATE ascii_bin NOT NULL DEFAULT 'CNY',
  benefit_json JSON NOT NULL COMMENT '带schema_version；积分数、有效期或商品目标',
  revision INT UNSIGNED NOT NULL DEFAULT 1,
  created_at DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
  updated_at DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
  PRIMARY KEY (id),
  UNIQUE KEY uq_product_sku (sku),
  KEY ix_product_list (status, kind)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci COMMENT='服务端价格来源；改价不改已创建订单';

CREATE TABLE purchase_orders (
  id CHAR(32) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  order_no VARCHAR(32) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  user_id VARCHAR(191) NOT NULL,
  product_id CHAR(32) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  quantity INT UNSIGNED NOT NULL DEFAULT 1,
  product_snapshot JSON NOT NULL COMMENT '名称、SKU、单价、benefit、revision和退款规则快照',
  total_fen BIGINT UNSIGNED NOT NULL,
  discount_fen BIGINT UNSIGNED NOT NULL DEFAULT 0,
  payable_fen BIGINT UNSIGNED NOT NULL,
  currency CHAR(3) CHARACTER SET ascii COLLATE ascii_bin NOT NULL DEFAULT 'CNY',
  status ENUM('PENDING','PAID','CLOSED','PARTIALLY_REFUNDED','REFUNDED') NOT NULL DEFAULT 'PENDING',
  fulfillment_status ENUM('PENDING','PROCESSING','FULFILLED','FAILED','REVOKED') NOT NULL DEFAULT 'PENDING',
  paid_attempt_id CHAR(32) CHARACTER SET ascii COLLATE ascii_bin NULL COMMENT '被业务接受的收款；额外收款单独退回',
  request_key VARCHAR(64) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  request_hash CHAR(64) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  lock_version BIGINT UNSIGNED NOT NULL DEFAULT 0,
  expires_at DATETIME(3) NOT NULL,
  paid_at DATETIME(3) NULL,
  closed_at DATETIME(3) NULL,
  created_at DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
  updated_at DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
  PRIMARY KEY (id),
  UNIQUE KEY uq_order_no (order_no),
  UNIQUE KEY uq_order_request (user_id, request_key),
  UNIQUE KEY uq_order_user (id, user_id),
  KEY ix_order_user_time (user_id, created_at, id),
  KEY ix_order_expiry (status, expires_at),
  KEY ix_order_fulfill (status, fulfillment_status, updated_at),
  CONSTRAINT fk_order_user FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE RESTRICT,
  CONSTRAINT fk_order_product FOREIGN KEY (product_id) REFERENCES products(id) ON DELETE RESTRICT
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci COMMENT='买什么、应付多少、权益是否发放；支付与履约分开';

CREATE TABLE payment_attempts (
  id CHAR(32) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  order_id CHAR(32) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  channel ENUM('WECHAT_NATIVE') NOT NULL,
  merchant_id VARCHAR(32) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  app_id VARCHAR(64) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  out_trade_no VARCHAR(32) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  transaction_id VARCHAR(64) CHARACTER SET ascii COLLATE ascii_bin NULL,
  status ENUM('CREATING','PENDING','UNKNOWN','CLOSING','SUCCESS','CLOSED','FAILED') NOT NULL DEFAULT 'CREATING',
  active_order_id CHAR(32) CHARACTER SET ascii COLLATE ascii_bin GENERATED ALWAYS AS
    (CASE WHEN status IN ('CREATING','PENDING','UNKNOWN','CLOSING') THEN order_id ELSE NULL END) STORED,
  expected_fen BIGINT UNSIGNED NOT NULL,
  paid_total_fen BIGINT UNSIGNED NULL COMMENT '渠道amount.total；必须匹配应付',
  payer_total_fen BIGINT UNSIGNED NULL COMMENT '优惠券后实付，不用于代替total验单',
  refunded_fen BIGINT UNSIGNED NOT NULL DEFAULT 0,
  refund_reserved_fen BIGINT UNSIGNED NOT NULL DEFAULT 0,
  currency CHAR(3) CHARACTER SET ascii COLLATE ascii_bin NOT NULL DEFAULT 'CNY',
  code_url TEXT NULL COMMENT '二维码链接，非支付成功凭证',
  expires_at DATETIME(3) NOT NULL,
  paid_at DATETIME(3) NULL,
  closed_at DATETIME(3) NULL,
  last_queried_at DATETIME(3) NULL,
  next_query_at DATETIME(3) NULL,
  error_code VARCHAR(64) NULL,
  error_message VARCHAR(1000) NULL,
  created_at DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
  updated_at DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
  PRIMARY KEY (id),
  UNIQUE KEY uq_payment_out_trade (channel, merchant_id, out_trade_no),
  UNIQUE KEY uq_payment_transaction (channel, merchant_id, transaction_id),
  UNIQUE KEY uq_payment_active (active_order_id),
  UNIQUE KEY uq_payment_order (id, order_id),
  KEY ix_payment_order_time (order_id, created_at),
  KEY ix_payment_query (status, next_query_at, id),
  CONSTRAINT fk_payment_order FOREIGN KEY (order_id) REFERENCES purchase_orders(id) ON DELETE RESTRICT
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci COMMENT='每次渠道下单；超时先查询；允许记录意外重复实收';

ALTER TABLE purchase_orders
  ADD KEY ix_order_paid_attempt (paid_attempt_id, id),
  ADD CONSTRAINT fk_order_paid_attempt FOREIGN KEY (paid_attempt_id, id) REFERENCES payment_attempts(id, order_id) ON DELETE RESTRICT;

CREATE TABLE payment_notifications (
  id CHAR(32) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  channel ENUM('WECHAT_NATIVE') NOT NULL,
  merchant_id VARCHAR(32) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  notification_id VARCHAR(128) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  event_type VARCHAR(64) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  payment_attempt_id CHAR(32) CHARACTER SET ascii COLLATE ascii_bin NULL,
  resource_no VARCHAR(64) CHARACTER SET ascii COLLATE ascii_bin NULL COMMENT 'out_trade_no或out_refund_no',
  body_sha256 CHAR(64) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  payload_redacted JSON NULL COMMENT '只存验签通过且脱敏后的排错字段',
  status ENUM('RECEIVED','PROCESSED','RETRY','REJECTED') NOT NULL DEFAULT 'RECEIVED',
  receive_count INT UNSIGNED NOT NULL DEFAULT 1,
  last_error VARCHAR(1000) NULL,
  received_at DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
  last_received_at DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
  processed_at DATETIME(3) NULL,
  PRIMARY KEY (id),
  UNIQUE KEY uq_payment_notification (channel, merchant_id, notification_id),
  KEY ix_notification_retry (status, received_at),
  CONSTRAINT fk_notification_payment FOREIGN KEY (payment_attempt_id) REFERENCES payment_attempts(id) ON DELETE RESTRICT
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci COMMENT='可信通知收件箱；验签失败不可占用合法notification_id';

CREATE TABLE refunds (
  id CHAR(32) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  order_id CHAR(32) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  payment_attempt_id CHAR(32) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  out_refund_no VARCHAR(32) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  channel_refund_id VARCHAR(64) CHARACTER SET ascii COLLATE ascii_bin NULL,
  request_key VARCHAR(64) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  request_hash CHAR(64) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  amount_fen BIGINT UNSIGNED NOT NULL,
  currency CHAR(3) CHARACTER SET ascii COLLATE ascii_bin NOT NULL DEFAULT 'CNY',
  status ENUM('REQUESTED','PROCESSING','UNKNOWN','SUCCESS','CLOSED','FAILED') NOT NULL DEFAULT 'REQUESTED',
  reason VARCHAR(500) NOT NULL,
  requested_by_user_id VARCHAR(191) NULL COMMENT '空表示系统退款；系统操作另记审计',
  error_message VARCHAR(1000) NULL,
  next_query_at DATETIME(3) NULL,
  succeeded_at DATETIME(3) NULL,
  created_at DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
  updated_at DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
  PRIMARY KEY (id),
  UNIQUE KEY uq_refund_out_no (out_refund_no),
  UNIQUE KEY uq_refund_request (order_id, request_key),
  KEY ix_refund_payment_order (payment_attempt_id, order_id),
  KEY ix_refund_query (status, next_query_at),
  CONSTRAINT fk_refund_payment_order FOREIGN KEY (payment_attempt_id, order_id) REFERENCES payment_attempts(id, order_id) ON DELETE RESTRICT,
  CONSTRAINT fk_refund_actor FOREIGN KEY (requested_by_user_id) REFERENCES users(id) ON DELETE RESTRICT
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci COMMENT='申请和渠道成功分开；退款中的金额占用额度';

CREATE TABLE entitlement_grants (
  id CHAR(32) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  user_id VARCHAR(191) NOT NULL,
  order_id CHAR(32) CHARACTER SET ascii COLLATE ascii_bin NOT NULL,
  benefit_key VARCHAR(64) CHARACTER SET ascii COLLATE ascii_bin NOT NULL DEFAULT 'credits',
  kind ENUM('CREDITS','MEMBERSHIP','GAME_ACCESS') NOT NULL DEFAULT 'CREDITS',
  target_game_id CHAR(32) CHARACTER SET ascii COLLATE ascii_bin NULL,
  status ENUM('ACTIVE','REFUND_HOLD','REVOKED','EXPIRED') NOT NULL DEFAULT 'ACTIVE',
  units_granted BIGINT UNSIGNED NOT NULL,
  units_available BIGINT UNSIGNED NOT NULL,
  units_reserved BIGINT UNSIGNED NOT NULL DEFAULT 0,
  units_consumed BIGINT UNSIGNED NOT NULL DEFAULT 0,
  units_revoked BIGINT UNSIGNED NOT NULL DEFAULT 0,
  starts_at DATETIME(3) NOT NULL,
  expires_at DATETIME(3) NULL,
  revoked_at DATETIME(3) NULL,
  metadata_json JSON NULL,
  created_at DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
  updated_at DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
  PRIMARY KEY (id),
  UNIQUE KEY uq_grant_benefit (order_id, benefit_key),
  UNIQUE KEY uq_grant_user (id, user_id),
  KEY ix_grant_balance (user_id, kind, status, expires_at, id),
  KEY ix_grant_order_user (order_id, user_id),
  CONSTRAINT fk_grant_order_user FOREIGN KEY (order_id, user_id) REFERENCES purchase_orders(id, user_id) ON DELETE RESTRICT,
  CONSTRAINT fk_grant_game FOREIGN KEY (target_game_id) REFERENCES games(id) ON DELETE RESTRICT
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci COMMENT='订单履约凭证及额度批次；同一权益不能发放两次';
